@startuml apigateway-microservice-domain-model

title API Gateway microservice domain model

class APIGatewayService <<Service>> {
    ..
    authenticateRequest(jwt: JWT): Future<>
    ..
    healthCheck(): Void
}

note left of APIGatewayService
    all the methods of each service are implemented relaying
    the request on that service after they've been authenticated
end note

class MetricsService <<Service>>
APIGatewayService --> MetricsService : "uses"

class AuthenticationService <<Service>>
APIGatewayService --> AuthenticationService : "uses"

class RidesService <<Service>>
APIGatewayService --> RidesService : "uses"

class EBikesService <<Service>>
APIGatewayService --> EBikesService : "uses"

class UsersService <<Service>>
APIGatewayService --> UsersService : "uses"

hide empty members

@enduml
